5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_1326.log
== TEST (2019-03-31 11:31:44) 
-- CODE:
x=(40)
y=(35)
y+x
print=(y)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:31:57) 
-- CODE:
x=(40)
y=(35) 
print=(y)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:32:19) 
-- CODE:
x=(40)
y=(35) 
print=(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(y)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:33:00) 
-- CODE:
x=(40)
y=(35) 
print"x"
print"y"
-- ERROR:
File "XXXX", line 3
    print"x"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:33:53) 
-- CODE:
x=(40)
y=(35) 
print="x"
print"y"
-- ERROR:
File "XXXX", line 4
    print"y"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:34:01) 
-- CODE:
x=(40)
y=(35) 
print="x"
print="y"
-- ERROR:
File "XXXX", line 4
    print"y"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:34:03) 
-- CODE:
x=(40)
y=(35) 
print="x"
print="y"
-- ERROR:
File "XXXX", line 4
    print"y"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:34:09) 
-- CODE:
x=(40)
y=(35) 
print="x"
print="y"

-- ERROR:
File "XXXX", line 4
    print"y"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:34:14) 
-- CODE:
x=(40)
y=(35) 
print="x"
print="y"

-- ERROR:
File "XXXX", line 4
    print"y"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:34:18) 
-- CODE:
x=(40)
y=(35) 
print="x"
print="y"

-- EXECUTION TIME:
0.125961
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:37:10) 
-- CODE:
x=(40) + y=(35)
print="x+y"

-- ERROR:
File "XXXX", line 1
    x=(40) + y=(35)
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:37:25) 
-- CODE:
x=(40) 
y=(35)
print="x+y"

-- ERROR:
File "XXXX", line 1
    x=(40) + y=(35)
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:37:32) 
-- CODE:
x=(40) 
y=(35)
print="x+y"

-- EXECUTION TIME:
0.178195
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:38:01) 
-- CODE:
x="40" 
y="35"
print="x+y"

-- ERROR:
File "XXXX", line 1
    x=(40) + y=(35)
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:38:20) 
-- CODE:
x="R$40" 
y="R$35"
print="x+y"

-- ERROR:
File "XXXX", line 1
    x=(40) + y=(35)
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:38:33) 
-- CODE:
x="R$40" 
y="R$35"
print="x+y"

-- EXECUTION TIME:
0.166831
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:39:04) 
-- CODE:
x="R$40" 
y="R$35"
print="x+y=r$"

-- ERROR:
File "XXXX", line 1
    x=(40) + y=(35)
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:40:21) 
-- CODE:
texto1=R$40 
texto2=R$35
print="texto1+texto2"

-- ERROR:
File "XXXX", line 1
    texto1=R$40 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:40:36) 
-- CODE:
texto1= R$40 
texto2= R$35
print="texto1+texto2"

-- ERROR:
File "XXXX", line 1
    texto1= R$40 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:41:03) 
-- CODE:
texto1=(R$40) 
texto2=(R$35)
print="texto1+texto2"

-- ERROR:
File "XXXX", line 1
    texto1=(R$40) 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:41:15) 
-- CODE:
texto 1=(R$40) 
texto 2=(R$35)
print="texto1+texto2"

-- ERROR:
File "XXXX", line 1
    texto 1=(R$40) 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:41:27) 
-- CODE:
texto 1=($40) 
texto 2=($35)
print="texto1+texto2"

-- ERROR:
File "XXXX", line 1
    texto 1=($40) 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:41:39) 
-- CODE:
texto 1=($40) 
texto 2=($35)
print=(texto1+texto2)

-- ERROR:
File "XXXX", line 1
    texto 1=($40) 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:42:11) 
-- CODE:
1=($40) 
2=($35)
print=(1+2)

-- ERROR:
File "XXXX", line 1
    1=($40) 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:43:06) 
-- CODE:
j=($40) 
l=($35)
print=(j+l)

-- ERROR:
File "XXXX", line 1
    j=($40) 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:43:34) 
-- CODE:
j=($40) 
l=($35)
print="j+l"

-- ERROR:
File "XXXX", line 1
    j=($40) 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:44:30) 
-- CODE:
j=(R$40) 
l=(R$35)
print="j+l"

-- ERROR:
File "XXXX", line 1
    j=(R$40) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:45:05) 
-- CODE:
j=(R$40) 
l=(R$35)
print="total j+l"

-- ERROR:
File "XXXX", line 1
    j=(R$40) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:45:55) 
-- CODE:
j=R$40 
l=R$35
print+jl

-- ERROR:
File "XXXX", line 1
    j=R$40 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:46:16) 
-- CODE:
j=R$40 
l=R$35
print+(j+l)

-- ERROR:
File "XXXX", line 1
    j=R$40 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:46:46) 
-- CODE:
j=R$40 
l=R$35
print=(j+l)

-- ERROR:
File "XXXX", line 1
    j=R$40 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:47:59) 
-- CODE:
j=R$40 
l=R$35
print="j+l"

-- ERROR:
File "XXXX", line 1
    j=R$40 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:48:10) 
-- CODE:
j= R$40 
l= R$35
print="j+l"

-- ERROR:
File "XXXX", line 1
    j= R$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:49:02) 
-- CODE:
total=R$40 
total2=R$35
print="total"
print="total2"

-- ERROR:
File "XXXX", line 1
    total=R$40 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:51:18) 
-- CODE:
total1=R$40 
total2=R$35
print="total+total2"


-- ERROR:
File "XXXX", line 1
    total1=R$40 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:51:46) 
-- CODE:
total1= (R$40) 
total2= (R$35)
print="total+total2"


-- ERROR:
File "XXXX", line 1
    total1= (R$40) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:52:14) 
-- CODE:
total1= (R$40) 
total2= (R$35)
print=total+total2)


-- ERROR:
File "XXXX", line 1
    total1= (R$40) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:52:28) 
-- CODE:
total1= (R$40) 
total2= (R$35)
print=(total+total2)


-- ERROR:
File "XXXX", line 1
    total1= (R$40) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:53:26) 
-- CODE:
total1=$40 
total2=$35
print=(total1+total2)


-- ERROR:
File "XXXX", line 1
    total1=$40 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:53:43) 
-- CODE:
total 1=$40 
total 2=$35
print=(total 1+total 2)


-- ERROR:
File "XXXX", line 1
    total 1=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:55:36) 
-- CODE:
total 1=$40 
total 2=$35
print=(total 1)
print=(total 2)



-- ERROR:
File "XXXX", line 1
    total 1=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:57:12) 
-- CODE:
total 1=$40 
total 2=$35
print(total 1+2)




-- ERROR:
File "XXXX", line 1
    total 1=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:57:24) 
-- CODE:
total 1=$40 
total 2=$35
printtotal 1+2)




-- ERROR:
File "XXXX", line 1
    total 1=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:57:50) 
-- CODE:
total 1=$40 
total 2=$35
print(total=1+2)




-- ERROR:
File "XXXX", line 1
    total 1=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:58:02) 
-- CODE:
total1=$40 
total2=$35
print(total=1+2)




-- ERROR:
File "XXXX", line 1
    total1=$40 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:59:28) 
-- CODE:
y=$40 
x=$35
total=$75
print(total)




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:59:40) 
-- CODE:
y=$40 
x=$35
total=$75
printtotal)




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:59:58) 
-- CODE:
y=$40 
x=$35
total=$75
print"total"




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:00:08) 
-- CODE:
y=$40 
x=$35
total=$75
print="total"




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:00:52) 
-- CODE:
y=$40 
x=$35
print="x+y="




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:01:04) 
-- CODE:
y=$40 
x=$35
print="x+y"




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:03:34) 
-- CODE:
y=$40 
x=$35
print"=soma y"
print"soma x"




-- ERROR:
File "XXXX", line 1
    y=$40 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:05:21) 
-- CODE:
aux=$40 
uye=$35
print"=soma aux/uye"





-- ERROR:
File "XXXX", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:05:32) 
-- CODE:
aux=$40 
uye=$35
print"=somaaux/uye"





-- ERROR:
File "XXXX", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:06:14) 
-- CODE:
aux=$40 
uye=$35
print"=somaaux/uye"





-- EXECUTION TIME:
0.219923
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:06:17) 
-- CODE:
aux=$40 
uye=$35
print"=somaaux/uye"





-- ERROR:
File "XXXX", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:06:32) 
-- CODE:
aux=$40 
uye=$35
print"=soma aux+uye"





-- ERROR:
File "XXXX", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:06:59) 
-- CODE:
aux=$40 
uye=$35
print"=soma"





-- ERROR:
File "XXXX", line 1
    aux=$40 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:09:08) 
-- CODE:
total=$40 
total=$35
print="soma= $40/$35"






-- ERROR:
File "XXXX", line 1
    total=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:09:29) 
-- CODE:
total=$40 
total=$35
print=soma=$40/$35






-- ERROR:
File "XXXX", line 1
    total=$40 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:10:00) 
-- CODE:
total=$40+$35 
print=soma=$40/$35






-- ERROR:
File "XXXX", line 1
    total=$40+$35 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:10:14) 
-- CODE:
total=$40+$35 
print"total"






-- ERROR:
File "XXXX", line 1
    total=$40+$35 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:13:31) 
-- CODE:
total=R$40+R$35 
print"total"






-- ERROR:
File "XXXX", line 1
    total=R$40+R$35 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:13:49) 
-- CODE:
total=R$40+R$35 
print="total"






-- ERROR:
File "XXXX", line 1
    total=R$40+R$35 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:04) 
-- CODE:
x=R$ 40
y=R$ 35
soma= R$75
print "x,y"
soma= soma + x,y








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:18) 
-- CODE:
x=R$ 40
y=R$ 35
soma= R$75
print "x,y"








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:08) 
-- CODE:
x=R$ 40
y=R$ 35
soma= R$75
print "x soma y"








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:44) 
-- CODE:
x=R$ 40
y=R$ 35
total= R$75
print "total"








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:50) 
-- CODE:
x=R$ 40
y=R$ 35
total= R$75
print"total"








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:20:14) 
-- CODE:
x=R$ 40
y=R$ 35
total= R$75
print=(total)








-- ERROR:
File "XXXX", line 1
    x=R$ 40
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:25:50) 
-- CODE:
print(40+35)








-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:25:59) 
-- CODE:
print(40+35)








-- EXECUTION TIME:
0.203975
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
